--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,7 @@ services:
   - type: web
     name: youtube-transcript-api
     env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
     plan: free
-    buildCommand: ""
-    startCommand: "python app.py"
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11
+    
