--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==3.0.3
 gunicorn==22.0.0
 waitress
-youtube-transcript-api==0.6.2
+git+https://github.com/jdepoix/youtube-transcript-api.git
 defusedxml==0.7.1
