--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 flask
 gunicorn
-git+https://github.com/jdepoix/youtube-transcript-api.git@proxy-support
+git+https://github.com/gladiaio/youtube-transcript-api.git@main
 defusedxml
