--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-flask
-gunicorn
-git+https://github.com/gladiaio/youtube-transcript-api.git
+Flask==2.3.3
+gunicorn==21.2.0
+youtube-transcript-api @ git+https://github.com/gladiaio/youtube-transcript-api.git
 defusedxml
