--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: youtube-transcript-api
     env: python
-    buildCommand: pip install --force-reinstall git+https://github.com/jdepoix/youtube-transcript-api.git && pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
-    plan: free
+    envVars:
+      - key: PORT
+        value: 10000
