--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,7 @@ services:
   - type: web
     name: youtube-transcript-api
     env: python
-    plan: free
+    region: virginia 
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
-    envVars:
-      - key: PORT
-        value: 10000
+    plan: free
