--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,9 @@
 services:
   - type: web
     name: youtube-transcript-api
-    env: python
-    region: virginia 
-    buildCommand: pip install -r requirements.txt
+    runtime: python
+    buildCommand: ""
     startCommand: gunicorn app:app
-    plan: free
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.11
