--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,7 @@
 services:
   - type: web
-    name: yt-transcript-api
-    runtime: python
-    buildCommand: |
-      apt-get update && apt-get install -y ffmpeg && pip install yt-dlp
+    name: youtube-transcript-api
+    env: python
+    plan: free
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11
